--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <AssemblyName>WebHooks.Tests</AssemblyName>
     <RootNamespace>WebHooks.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
-    <PackageReference Include="OwinHttpMessageHandler" Version="2.0.1" />
     <PackageReference Include="xunit.core" Version="2.4.0" />
     <PackageReference Include="Shouldly" Version="3.0.0" />
     <PackageReference Include="SqlStreamStore" Version="1.1.2" />
